Made a few new prodjects with Jordan and the class

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
             width: calc(100vw - 20px);
             border: 10px solid red;
             display: flex;
+            flex-direction: column;
             justify-content: center;
-            align-items: center;
         }
         
         .container>.img_blocks {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
+            justify-content: center;
         }
     </style>
 </head>
@@ -32,12 +33,12 @@
 <body>
     <div class="container">
         <div class="img_blocks">
-            <img src="https://source.unsplash.com/random/150x150" alt="">
-            <img src="https://source.unsplash.com/random/150x150" alt="">
-            <img src="https://source.unsplash.com/random/150x150" alt="">
-            <img src="https://source.unsplash.com/random/150x150" alt="">
-            <img src="https://source.unsplash.com/random/150x150" alt="">
-            <img src="https://source.unsplash.com/random/150x150" alt="">
+            <img src="https://source.unsplash.com/random/50x50" alt="">
+            <img src="https://source.unsplash.com/random/50x50" alt="">
+            <img src="https://source.unsplash.com/random/50x50" alt="">
+            <img src="https://source.unsplash.com/random/50x50" alt="">
+            <img src="https://source.unsplash.com/random/50x50" alt="">
+            <img src="https://source.unsplash.com/random/50x50" alt="">
         </div>
     </div>
 
